# UniversityCourses

./: README.md
Databas/Labb1/: Diagram.drawio
Databas/Labb2/: Constraints.sql  DjurDiagram.drawio  Insertions.sql  Questions.sql  Run_all.sql  Tables.sql  basrelation.txt
Databas/Labb3/: 1NFRätt.drawio  2NF.drawio  2NFRätt.drawio  3NF.drawio  3NFRätt.drawio  OnormaliseradeER.drawio  basrelationer.txt
Datastrukturer & Algoritmer/labb1/: CMakeLists.txt  dijkstras.cpp  dijkstras.h  edges  graph.cpp  graph.h  main.cpp  reader.cpp  reader.h
Datornätverk/: Laboration2_DN.pkt
Grundläggande Datavetenskap/Laboration 2/: Uppgift1Labb2.sim  Uppgift2Labb2.sim  Uppgift3Labb2.sim  Uppgift4Labb2.sim  Uppgift5Labb2.sim  Uppgift6Labb2.sim  Uppgift7Labb2.sim  Uppgift8Labb2.sim  Uppgift9Labb2.sim
Grundläggande Datavetenskap/Laboration 4/: Sida2.html  httpsstudenter.miun.se~omsu2400Labb.txt  index.html
Inbäddade system för Internet of Things/Labb1/: Flödesschema  Flödesschema.drawio  FlödesschemaDel2.drawio  Komponentlista.txt  Labb1.ino  Labb1_del2.ino
Inbäddade system för Internet of Things/Labb2/: Laboration2.ino  Laboration2Inlämningsförsök2.docx  flödesschema.drawio
Inbäddade system för Internet of Things/Labb3new/: flödesschema_arduinoIDE.drawio
IntroC++/Laboration 1 C++/: Laboration1  Laboration1.cpp  makefile
Java 1/GUI/: GUI.java
Journalistik/: KällförteckningRappotJourn.txt
Pmetodik/Labb2CLION/: CMakeLists.txt  cylinder.cpp  rounded_rectangle.cpp  shape.cpp  square.h
ProgrammeringsmetodikC++/LABB1CLion/: CMakeLists.txt  int_buffer.cpp  int_sorted.h
(+263 files in other folders)
